<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/help_container_sp_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_sp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_sp_text"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_container_mp_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_mp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_mp_text"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_container_question_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_questions"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_questions_text"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_container_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_review"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_review_text"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_container_highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_score"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_score_text"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_container_qa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_qa"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_qa_text"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help_container_qa_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_qa_"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_qa_text_"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>