<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dip"
            android:layout_gravity="center"
            android:text="@string/about_0"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_gravity="center"
            android:id="@+id/app_version"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_gravity="center"
            android:text="@string/about_1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/about_2"
            android:textSize="16sp"
            android:layout_marginBottom="15dip"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_3"
            android:textSize="15sp"
            android:id="@+id/about_link_text"
            android:layout_marginBottom="15dip"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/about_4"
            android:textSize="15sp"
            android:layout_marginBottom="15dip"
            android:gravity="center_horizontal|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/about_5"
            android:textSize="15sp"
            android:layout_marginBottom="15dip"
            android:id="@+id/about_link_text_2"
            android:gravity="center_horizontal|center_horizontal" />
    </LinearLayout>
</ScrollView>
