<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_feedback_question_formulation"
        android:id="@+id/quiz_feedback_question_formulation"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_feedback_right_answer"
        android:id="@+id/quiz_feedback_right_answer"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/quiz_feedback_distractors"
        android:id="@+id/quiz_feedback_distractors"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/quiz_feedback_difficulty"/>


    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="4"
        android:id="@+id/quiz_feedback_difficulty"/>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="very easy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_gravity="right"
            android:text="very hard"/></LinearLayout>

</LinearLayout>