<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.tudarmstadt.lt.simpsonsQuiz.CreateQuestionFragment">

    <EditText
        android:id="@+id/enter_question_question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:autoText="true"
        android:hint="@string/enter_question_hint"
        android:textSize="25sp"
        android:inputType="textCapSentences"/>


    <Button
        android:id="@+id/enter_question_generate_answers_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="10dip"
        android:onClick="generateAnswers"
        android:text="@string/generate_answers"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_question_hint_cat"
        android:id="@+id/enter_question_hint_cat"
        android:layout_weight="0"
        android:visibility="invisible"/>

</LinearLayout>