<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.tudarmstadt.lt.simpsonsQuiz.ReviewActivity">

    <me.grantland.widget.AutofitTextView
        android:id="@+id/quiz_question"
        android:text="@string/loading_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        autofit:minTextSize="16sp"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:layout_marginTop="25dip"
        android:layout_marginBottom="25dip"
        android:layout_weight="0"/>
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:layout_weight="1"
        android:id="@+id/quiz_answer_container">
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <Button android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="0dip"
                android:id="@+id/quiz_btn_1"
                android:onClick="quizAnswerButtonClick"/>
            <Button android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="0dip"
                android:id="@+id/quiz_btn_2"
                android:onClick="quizAnswerButtonClick"/>
        </LinearLayout>

        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <Button android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="0dip"
                android:id="@+id/quiz_btn_3"
                android:onClick="quizAnswerButtonClick"/>
            <Button android:layout_weight="1"
                android:layout_height="100dip"
                android:layout_width="0dip"
                android:id="@+id/quiz_btn_4"
                android:onClick="quizAnswerButtonClick"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:id="@+id/quiz_feedback_section"
        android:visibility="invisible"
        android:layout_marginTop="25dip"
        android:layout_weight="0">
        <Button android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dip"
            android:id="@+id/quiz_btn_rate"
            android:text="@string/review_question"
            android:onClick="rateQuestionButtonClick"/>
        <Button android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_width="0dip"
            android:id="@+id/quiz_btn_next_qst"
            android:text="@string/new_question"
            android:onClick="newQuestionButtonClick"/>
    </LinearLayout>
</LinearLayout>
